# hazel

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_flags.txt
assets/shaders/: flat_color.glsl  texture.glsl
src/hazel/: application.cpp  application.hpp  core.hpp  entry_point.hpp  hazel.hpp  input.hpp  layer.cpp  layer.hpp  layer_stack.cpp  layer_stack.hpp  log.cpp  log.hpp  orthographic_camera_controller.cpp  orthographic_camera_controller.hpp  window.hpp
src/hazel/core/: application.cpp  application.hpp  core.hpp  entry_point.hpp  input.hpp  layer.cpp  layer.hpp  layer_stack.cpp  layer_stack.hpp  log.cpp  log.hpp  timestep.hpp  window.hpp
src/hazel/events/: application_event.hpp  event.hpp  key_codes.hpp  key_event.hpp  mouse_button_codes.hpp  mouse_event.hpp
src/hazel/imgui/: imgui_build.cpp  imgui_layer.cpp  imgui_layer.hpp
src/hazel/platform/: windows.cpp  windows.hpp
src/hazel/platform/opengl/: imgui_opengl_renderer.cpp  imgui_opengl_renderer.h  opengl_buffer.cpp  opengl_buffer.hpp  opengl_context.cpp  opengl_context.hpp  opengl_renderer_api.cpp  opengl_renderer_api.hpp  opengl_shader.cpp  opengl_shader.hpp  opengl_texture.cpp  opengl_texture.hpp  opengl_vertex_array.cpp  opengl_vertex_array.hpp
src/hazel/platform/windows/: windows.cpp  windows.hpp  windows_input.cpp  windows_input.hpp
src/hazel/renderer/: buffer.cpp  buffer.hpp  graphics_context.hpp  orthographic_camera.cpp  orthographic_camera.hpp  orthographic_camera_controller.cpp  render_command.cpp  render_command.hpp  renderer.cpp  renderer.hpp  renderer_2d.cpp  renderer_2d.hpp  renderer_api.cpp  renderer_api.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertex_array.cpp  vertex_array.hpp
src/sandbox/: app.cpp  sandbox_2d.cpp  sandbox_2d.hpp
